# Planar-Grasping-Platform

./: README.md
Arduino_controllers/: README  Untitled Document
Arduino_controllers/gripper/: README
Arduino_controllers/gripper_controller/: gripper.ino
Arduino_controllers/scara_controller/: README
CAD/controller/: clamp.SLDPRT  fan.SLDPRT  fan_plate.SLDPRT  mega holder.SLDPRT
CAD/endstops/: amount.SLDPRT  z_trigger.SLDPRT
CAD/force_sensor_package/: load_cell_cone.SLDPRT
CAD/gripper/: drv_riser.SLDPRT  gripper.SLDASM  igear.SLDPRT  jaw.SLDPRT  jaw_potentiomer.SLDPRT  mini_bearing.SLDPRT  motor.SLDPRT  shell_no_motor.SLDPRT  skate_bearing.SLDPRT  skate_bearing2.SLDPRT  small_side_plate_motor.SLDPRT  top.SLDPRT  top_plate2.SLDPRT
CAD/manipulator/: 35t_98.5percent.SLDPRT  ally_bar.SLDPRT  arm.SLDASM  back_plate.SLDPRT  ballnut_holder.SLDPRT  buttress.SLDPRT  frame.SLDPRT  j2_clamp.SLDPRT  j3top.SLDPRT  j3top2.SLDPRT  linear_rail.SLDPRT  link0.SLDASM  link4.SLDASM  motot_mount_1.SLDPRT  mount_plate.SLDDRW  mount_plate.SLDPRT  retainer.SLDPRT  retainer_basic.SLDPRT  skate_bearing.SLDPRT  smallshaft.SLDPRT  top_plate.SLDPRT  z_motor_mount.SLDPRT
CAD/realsenseD415_mount/: camera_rod.SLDPRT  realsense mount.SLDPRT  realsenseend.SLDPRT  sidemount2.SLDPRT
grasp_generation/: README
grasp_generation/ggcnn-master/: README  ROSlink.py  cornell_background.txt  cornell_sample.txt  run.py  (+3 more)
scara_CAD/: README
scara_ws/: source_all.bash
scara_ws/src/scara_driver/: CMakeLists.txt  README
scara_ws/src/scara_driver/src/: driver.cpp  driver_demo.cpp  user.cpp
(+126 files in other folders)
